[project]
name = "ooai-dl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Will", email = "you@example.com"},
]
dependencies = ["pydantic>=2.13.3", "pydantic-settings>=2.14.0", "rich>=15.0.0", "structlog>=25.5.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
lc = [
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
